[package]
name = "navim"
version = "1.3.0"
edition = "2021"
description = "A vim-style terminal web browser"
authors = ["politikl"]
repository = "https://github.com/politikl/navim"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
scraper = "0.17"
colored = "2.0"
ratatui = "0.28"
crossterm = "0.28"
html2text = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
url = "2.5"
